# Plagiarism-Detector-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  stopwords.txt
api/: Cargo.toml
api/src/: data.rs  lib.rs  pool.rs  process.rs
entity/: Cargo.toml
entity/src/: lib.rs  name.rs  paper.rs  req.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231223_000001_create_tables.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
src/: cut.rs  data.rs  main.rs  process.rs
