[package]
name = "plagiarism-detector-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = "0.6"
rust-tfidf = "1.1.1"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.157"
serde_json = "1.0.94"
