[package]
name = "plagiarism-detector-rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jieba-rs = "0.6.7"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.157"
serde_json = "1.0.94"
lazy_static = "1.4.0"
