[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.10"
features = [
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]
