[package]
name = "plagiarism-detector-rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
serde_json = { version = "1" }

[dependencies.sea-orm]
version = "0.12.10"
features = [
    "runtime-tokio-native-tls",
    "sqlx-mysql",
]

[dev-dependencies]
tokio = "1.20.0"

